# cyclorEditor

./: .gitignore  CMakeLists.txt  README
include/: helper.h  map.h  resources.h
src/: CMakeLists.txt  helper.c  main.c  map.c  resources.c
