CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(cyclorEditor C)

FIND_PROGRAM(SDLC sdl-config)
IF(NOT SDLC)
  MESSAGE(FATAL "Could not find sdl-config")
ENDIF(NOT SDLC)

EXECUTE_PROCESS ( 
  COMMAND sdl-config --cflags
  OUTPUT_VARIABLE SDL_CFLAGS 
)

INCLUDE_DIRECTORIES(include)
ADD_DEFINITIONS(-Wall -g ${SDL_CFLAGS})

ADD_SUBDIRECTORY(src bin)
